--- a/files/en-us/webassembly/exported_functions/index.html
+++ b/files/en-us/webassembly/exported_functions/index.html
@@ -12,7 +12,7 @@ tags:
 ---
 <div>{{WebAssemblySidebar}}</div>
 
-<p class="summary">Exported WebAssembly functions are how WebAssembly functions are represented in JavaScript. This article describes what they are in a little more detail.</p>
+<p>Exported WebAssembly functions are how WebAssembly functions are represented in JavaScript. This article describes what they are in a little more detail.</p>
 
 <h2 id="Exported..._what">Exported... what?</h2>
 
