--- a/files/en-us/webassembly/loading_and_running/index.html
+++ b/files/en-us/webassembly/loading_and_running/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <div>{{WebAssemblySidebar}}</div>
 
-<p class="summary">To use WebAssembly in JavaScript, you first need to pull your module into memory before compilation/instantiation. This article provides a reference for the different mechanisms that can be used to fetch WebAssembly bytecode, as well as how to compile/instantiate then run it.</p>
+<p>To use WebAssembly in JavaScript, you first need to pull your module into memory before compilation/instantiation. This article provides a reference for the different mechanisms that can be used to fetch WebAssembly bytecode, as well as how to compile/instantiate then run it.</p>
 
 <h2 id="What_are_the_options">What are the options?</h2>
 
@@ -53,11 +53,11 @@ tags:
 }</pre>
 
 <div class="note">
-<p><strong>Note</strong>: Usually we only care about the instance, but it’s useful to have the module in case we want to cache it, share it with another worker or window via <code><a href="/en-US/docs/Web/API/MessagePort/postMessage">postMessage()</a></code>, or create more instances.</p>
+<p><strong>Note:</strong> Usually we only care about the instance, but it’s useful to have the module in case we want to cache it, share it with another worker or window via <code><a href="/en-US/docs/Web/API/MessagePort/postMessage">postMessage()</a></code>, or create more instances.</p>
 </div>
 
 <div class="note">
-<p><strong>Note</strong>: The second overload form takes a {{jsxref("WebAssembly.Module")}} object as an argument, and returns a promise directly containing the instance object as the result. See the <a href="/en-US/docs/Web/JavaScript/Reference/Global_Objects/WebAssembly/instantiate#second_overload_example">Second overload example</a>.</p>
+<p><strong>Note:</strong> The second overload form takes a {{jsxref("WebAssembly.Module")}} object as an argument, and returns a promise directly containing the instance object as the result. See the <a href="/en-US/docs/Web/JavaScript/Reference/Global_Objects/WebAssembly/instantiate#second_overload_example">Second overload example</a>.</p>
 </div>
 
 <h3 id="Running_your_WebAssembly_code">Running your WebAssembly code</h3>
@@ -78,7 +78,7 @@ tags:
 })</pre>
 
 <div class="note">
-<p><strong>Note</strong>: For more information on how exporting from a WebAssembly module works, have a read of <a href="/en-US/docs/WebAssembly/Using_the_JavaScript_API">Using the WebAssembly JavaScript API</a>, and <a href="/en-US/docs/WebAssembly/Understanding_the_text_format">Understanding WebAssembly text format</a>.</p>
+<p><strong>Note:</strong> For more information on how exporting from a WebAssembly module works, have a read of <a href="/en-US/docs/WebAssembly/Using_the_JavaScript_API">Using the WebAssembly JavaScript API</a>, and <a href="/en-US/docs/WebAssembly/Understanding_the_text_format">Understanding WebAssembly text format</a>.</p>
 </div>
 
 <h2 id="Using_XMLHttpRequest">Using XMLHttpRequest</h2>
@@ -107,5 +107,5 @@ request.onload = function() {
 };</pre>
 
 <div class="note">
-<p><strong>Note</strong>: You can see an example of this in action in <a href="https://mdn.github.io/webassembly-examples/js-api-examples/xhr-wasm.html">xhr-wasm.html</a>.</p>
+<p><strong>Note:</strong> You can see an example of this in action in <a href="https://mdn.github.io/webassembly-examples/js-api-examples/xhr-wasm.html">xhr-wasm.html</a>.</p>
 </div>
