--- a/files/en-us/webassembly/understanding_the_text_format/index.html
+++ b/files/en-us/webassembly/understanding_the_text_format/index.html
@@ -16,10 +16,10 @@ tags:
 ---
 <p>{{WebAssemblySidebar}}</p>
 
-<p class="summary">To enable WebAssembly to be read and edited by humans, there is a textual representation of the wasm binary format. This is an intermediate form designed to be exposed in text editors, browser developer tools, etc. This article explains how that text format works, in terms of the raw syntax, and how it is related to the underlying bytecode it represents — and the wrapper objects representing wasm in JavaScript.</p>
+<p>To enable WebAssembly to be read and edited by humans, there is a textual representation of the wasm binary format. This is an intermediate form designed to be exposed in text editors, browser developer tools, etc. This article explains how that text format works, in terms of the raw syntax, and how it is related to the underlying bytecode it represents — and the wrapper objects representing wasm in JavaScript.</p>
 
 <div class="notecard note">
-<p><strong>Note</strong>: This is potentially overkill if you are a web developer who just wants to load a wasm module into a page and use it in your code (see <a href="/en-US/docs/WebAssembly/Using_the_JavaScript_API">Using the WebAssembly JavaScript API</a>), but it is more useful if for example, you want to write wasm modules to optimize the performance of your JavaScript library, or build your own WebAssembly compiler.</p>
+<p><strong>Note:</strong> This is potentially overkill if you are a web developer who just wants to load a wasm module into a page and use it in your code (see <a href="/en-US/docs/WebAssembly/Using_the_JavaScript_API">Using the WebAssembly JavaScript API</a>), but it is more useful if for example, you want to write wasm modules to optimize the performance of your JavaScript library, or build your own WebAssembly compiler.</p>
 </div>
 
 <h2 id="S-expressions">S-expressions</h2>
@@ -28,7 +28,7 @@ tags:
 
 <p>First, let’s see what an S-expression looks like.  Each node in the tree goes inside a pair of parentheses — <code>( ... )</code>.  The first label inside the parenthesis tells you what type of node it is, and after that there is a space-separated list of either attributes or child nodes.  So that means the WebAssembly S-expression:</p>
 
-<pre class="brush: wasm no-line-numbers">(module (memory 1) (func))</pre>
+<pre class="brush: wasm">(module (memory 1) (func))</pre>
 
 <p>represents a tree with the root node “module” and two child nodes, a "memory" node with the attribute "1" and a "func" node.  We’ll see shortly what these nodes actually mean.</p>
 
@@ -36,13 +36,13 @@ tags:
 
 <p>Let's start with the simplest, shortest possible wasm module.</p>
 
-<pre class="brush: wasm no-line-numbers">(module)</pre>
+<pre class="brush: wasm">(module)</pre>
 
 <p>This module is totally empty, but is still a valid module.</p>
 
 <p>If we convert our module to binary now (see <a href="/en-US/docs/WebAssembly/Text_format_to_wasm">Converting WebAssembly text format to wasm</a>), we’ll see just the 8 byte module header described in the <a href="https://webassembly.org/docs/binary-encoding/#high-level-structure">binary format</a>:</p>
 
-<pre class="brush: wasm no-line-numbers">0000000: 0061 736d              ; WASM_BINARY_MAGIC
+<pre class="brush: wasm">0000000: 0061 736d              ; WASM_BINARY_MAGIC
 0000004: 0100 0000              ; WASM_BINARY_VERSION</pre>
 
 <h3 id="Adding_functionality_to_your_module">Adding functionality to your module</h3>
@@ -51,7 +51,7 @@ tags:
 
 <p>All code in a webassembly module is grouped into functions, which have the following pseudo-code structure:</p>
 
-<pre class="brush: wasm no-line-numbers">( func &lt;signature&gt; &lt;locals&gt; &lt;body&gt; )</pre>
+<pre class="brush: wasm">( func &lt;signature&gt; &lt;locals&gt; &lt;body&gt; )</pre>
 
 <ul>
  <li>The <strong>signature</strong> declares what the function takes (parameters) and returns (return values).</li>
@@ -83,7 +83,7 @@ tags:
 
 <p>A single parameter is written <code>(param i32)</code> and the return type is written <code>(result i32)</code>, hence a binary function that takes two 32-bit integers and returns a 64-bit float would be written like this:</p>
 
-<pre class="brush: wasm no-line-numbers">(func (param i32) (param i32) (result f64) ... )</pre>
+<pre class="brush: wasm">(func (param i32) (param i32) (result f64) ... )</pre>
 
 <p>After the signature, locals are listed with their type, for example <code>(local i32)</code>. Parameters are basically just locals that are initialized with the value of the corresponding argument passed by the caller.</p>
 
@@ -93,7 +93,7 @@ tags:
 
 <p>The <code>local.get</code>/<code>local.set</code> commands refer to the item to be got/set by its numeric index: parameters are referred to first, in order of their declaration, followed by locals in order of their declaration.  So given the following function:</p>
 
-<pre class="brush: wasm no-line-numbers">(func (param i32) (param f32) (local f64)
+<pre class="brush: wasm">(func (param i32) (param f32) (local f64)
   local.get 0
   local.get 1
   local.get 2)</pre>
@@ -104,7 +104,7 @@ tags:
 
 <p>Thus you could rewrite our previous signature like so:</p>
 
-<pre class="brush: wasm no-line-numbers">(func (param $p1 i32) (param $p2 f32) (local $loc f64) …)</pre>
+<pre class="brush: wasm">(func (param $p1 i32) (param $p2 f32) (local $loc f64) …)</pre>
 
 <p>And then could write <code>local.get $p1</code> instead of <code>local.get 0</code>, etc.  (Note that when this text gets converted to binary, though, the binary will contain only the integer.)</p>
 
@@ -146,11 +146,11 @@ tags:
 
 <p>Like locals, functions are identified by an index by default, but for convenience, they can be named. Let's start by doing this — first, we'll add a name preceded by a dollar sign, just after the <code>func</code> keyword:</p>
 
-<pre class="brush: wasm no-line-numbers">(func $add … )</pre>
+<pre class="brush: wasm">(func $add … )</pre>
 
 <p>Now we need to add an export declaration — this looks like so:</p>
 
-<pre class="brush: wasm no-line-numbers">(export "add" (func $add))</pre>
+<pre class="brush: wasm">(export "add" (func $add))</pre>
 
 <p>Here, <code>add</code> is the name the function will be identified by in JavaScript whereas <code>$add</code> picks out which WebAssembly function inside the Module is being exported.</p>
 
@@ -174,7 +174,7 @@ tags:
   });</pre>
 
 <div class="notecard note">
-<p><strong>Note</strong>: You can find this example in GitHub as <a href="https://github.com/mdn/webassembly-examples/blob/master/understanding-text-format/add.html">add.html</a> (<a href="https://mdn.github.io/webassembly-examples/understanding-text-format/add.html">see it live also</a>). Also see {{JSxRef("WebAssembly.instantiateStreaming()")}} for more details about the instantiate function.</p>
+<p><strong>Note:</strong> You can find this example in GitHub as <a href="https://github.com/mdn/webassembly-examples/blob/master/understanding-text-format/add.html">add.html</a> (<a href="https://mdn.github.io/webassembly-examples/understanding-text-format/add.html">see it live also</a>). Also see {{JSxRef("WebAssembly.instantiateStreaming()")}} for more details about the instantiate function.</p>
 </div>
 
 <h2 id="Exploring_fundamentals">Exploring fundamentals</h2>
@@ -194,14 +194,14 @@ tags:
     i32.add))</pre>
 
 <div class="notecard note">
-<p><strong>Note</strong>: <code>i32.const</code> just defines a 32-bit integer and pushes it onto the stack. You could swap out the <code>i32</code> for any of the other available types, and change the value of the const to whatever you like (here we’ve set the value to <code>42</code>).</p>
+<p><strong>Note:</strong> <code>i32.const</code> just defines a 32-bit integer and pushes it onto the stack. You could swap out the <code>i32</code> for any of the other available types, and change the value of the const to whatever you like (here we’ve set the value to <code>42</code>).</p>
 </div>
 
 <p>In this example you’ll notice an <code>(export "getAnswerPlus1")</code> section, declared just after the <code>func</code> statement in the second function — this is a shorthand way of declaring that we want to export this function, and defining the name we want to export it as.</p>
 
 <p>This is functionally equivalent to including a separate function statement outside the function, elsewhere in the module in the same manner as we did before, e.g.:</p>
 
-<pre class="brush: wasm no-line-numbers">(export "getAnswerPlus1" (func $functionName))</pre>
+<pre class="brush: wasm">(export "getAnswerPlus1" (func $functionName))</pre>
 
 <p>The JavaScript code to call our above module looks like so:</p>
 
@@ -244,7 +244,7 @@ WebAssembly.instantiateStreaming(fetch('logger.wasm'), importObject)
   });</pre>
 
 <div class="notecard note">
-<p><strong>Note</strong>: You can find this example on GitHub as <a href="https://github.com/mdn/webassembly-examples/blob/master/understanding-text-format/logger.html">logger.html</a> (<a href="https://mdn.github.io/webassembly-examples/understanding-text-format/logger.html">see it live also</a>).</p>
+<p><strong>Note:</strong> You can find this example on GitHub as <a href="https://github.com/mdn/webassembly-examples/blob/master/understanding-text-format/logger.html">logger.html</a> (<a href="https://mdn.github.io/webassembly-examples/understanding-text-format/logger.html">see it live also</a>).</p>
 </div>
 
 <h3 id="Declaring_globals_in_WebAssembly">Declaring globals in WebAssembly</h3>
@@ -266,7 +266,7 @@ WebAssembly.instantiateStreaming(fetch('logger.wasm'), importObject)
 
 <p>To create an equivalent value using JavaScript, you'd use the {{JSxRef("WebAssembly.Global()")}} constructor:</p>
 
-<pre class="brush: js no-line-numbers">const global = new WebAssembly.Global({value: "i32", mutable: true}, 0);</pre>
+<pre class="brush: js">const global = new WebAssembly.Global({value: "i32", mutable: true}, 0);</pre>
 
 <h3 id="WebAssembly_Memory">WebAssembly Memory</h3>
 
@@ -282,7 +282,7 @@ WebAssembly.instantiateStreaming(fetch('logger.wasm'), importObject)
 
 <p>While there are many different ways to encode a string’s length in the string itself (for example, C strings); for simplicity here we just pass both offset and length as parameters:</p>
 
-<pre class="brush: wasm no-line-numbers">(import "console" "log" (func $log (param i32) (param i32)))</pre>
+<pre class="brush: wasm">(import "console" "log" (func $log (param i32) (param i32)))</pre>
 
 <p>On the JavaScript side, we can use the <a href="/en-US/docs/Web/API/TextDecoder">TextDecoder API</a> to easily decode our bytes into a JavaScript string.  (We specify <code>utf8</code> here, but many other encodings are supported.)</p>
 
@@ -296,7 +296,7 @@ WebAssembly.instantiateStreaming(fetch('logger.wasm'), importObject)
 
 <p>For simplicity, let's create it in JavaScript then import it into WebAssembly.  Our <code>import</code> statement is written as follows:</p>
 
-<pre class="brush: wasm no-line-numbers">(import "js" "mem" (memory 1))</pre>
+<pre class="brush: wasm">(import "js" "mem" (memory 1))</pre>
 
 <p>The <code>1</code> indicates that the imported memory must have at least 1 page of memory (WebAssembly defines a page to be 64KB.)</p>
 
@@ -314,7 +314,7 @@ WebAssembly.instantiateStreaming(fetch('logger.wasm'), importObject)
     call $log))</pre>
 
 <div class="notecard note">
-<p><strong>Note</strong>: Above, note the double semi-colon syntax (<code>;;</code>) for allowing comments in WebAssembly files.</p>
+<p><strong>Note:</strong> Above, note the double semi-colon syntax (<code>;;</code>) for allowing comments in WebAssembly files.</p>
 </div>
 
 <p>Now from JavaScript we can create a Memory with 1 page and pass it in. This results in "Hi" being printed to the console:</p>
@@ -329,7 +329,7 @@ WebAssembly.instantiateStreaming(fetch('logger2.wasm'), importObject)
   });</pre>
 
 <div class="notecard note">
-<p><strong>Note</strong>: You can find the full source on GitHub as <a href="https://github.com/mdn/webassembly-examples/blob/master/understanding-text-format/logger2.html">logger2.html</a> (<a href="https://mdn.github.io/webassembly-examples/understanding-text-format/logger2.html">also see it live</a>).</p>
+<p><strong>Note:</strong> You can find the full source on GitHub as <a href="https://github.com/mdn/webassembly-examples/blob/master/understanding-text-format/logger2.html">logger2.html</a> (<a href="https://mdn.github.io/webassembly-examples/understanding-text-format/logger2.html">also see it live</a>).</p>
 </div>
 
 <h3 id="WebAssembly_tables">WebAssembly tables</h3>
@@ -372,7 +372,7 @@ WebAssembly.instantiateStreaming(fetch('logger2.wasm'), importObject)
 </ul>
 
 <div class="notecard note">
-<p><strong>Note</strong>: Uninitialized elements are given a default throw-on-call value.</p>
+<p><strong>Note:</strong> Uninitialized elements are given a default throw-on-call value.</p>
 </div>
 
 <p>In JavaScript, the equivalent calls to create such a table instance would look something like this:</p>
@@ -408,7 +408,7 @@ WebAssembly.instantiateStreaming(fetch('logger2.wasm'), importObject)
 
 <p>You could also declare the <code>call_indirect</code> parameter explicitly during the command call instead of before it, like this:</p>
 
-<pre class="brush: wasm no-line-numbers">(call_indirect (type $return_i32) (local.get $i))</pre>
+<pre class="brush: wasm">(call_indirect (type $return_i32) (local.get $i))</pre>
 
 <p>In a higher level, more expressive language like JavaScript, you could imagine doing the same thing with an array (or probably more likely, object) containing functions. The pseudo code would look something like <code>tbl[i]()</code>.</p>
 
@@ -416,7 +416,7 @@ WebAssembly.instantiateStreaming(fetch('logger2.wasm'), importObject)
 
 <p>So what links the <code>call_indirect</code> to the table we are calling? The answer is that there is only one table allowed right now per module instance, and that is what <code>call_indirect</code> is implicitly calling. In the future, when multiple tables are allowed, we would also need to specify a table identifier of some kind, along the lines of</p>
 
-<pre class="brush: wasm no-line-numbers">call_indirect $my_spicy_table (type $i32_to_void)</pre>
+<pre class="brush: wasm">call_indirect $my_spicy_table (type $i32_to_void)</pre>
 
 <p>The full module all together looks like this, and can be found in our <a href="https://github.com/mdn/webassembly-examples/blob/master/understanding-text-format/wasm-table.wat">wasm-table.wat</a> example file:</p>
 
@@ -496,9 +496,9 @@ WebAssembly.instantiateStreaming(fetch('logger2.wasm'), importObject)
 </ol>
 
 <div class="notecard note">
-<p><strong>Note</strong>: The above expressions again pop values from the stack implicitly, but you could declare these explicitly inside the command calls instead, for example:</p>
+<p><strong>Note:</strong> The above expressions again pop values from the stack implicitly, but you could declare these explicitly inside the command calls instead, for example:</p>
 
-<pre class="brush: wasm no-line-numbers" style="margin-bottom: 0;">(i32.store (i32.const 0) (i32.const 42))
+<pre class="brush: wasm">(i32.store (i32.const 0) (i32.const 42))
 (call_indirect (type $void_to_i32) (i32.const 0))</pre>
 
 </div>
@@ -522,7 +522,7 @@ Promise.all([
 <p>Each of the modules that is being compiled can import the same memory and table objects and thus share the same linear memory and table "address space".</p>
 
 <div class="notecard note">
-<p><strong>Note</strong>: You can find this example on GitHub as <a href="https://github.com/mdn/webassembly-examples/blob/master/understanding-text-format/shared-address-space.html">shared-address-space.html</a> (<a href="https://mdn.github.io/webassembly-examples/understanding-text-format/shared-address-space.html">see it live also</a>).</p>
+<p><strong>Note:</strong> You can find this example on GitHub as <a href="https://github.com/mdn/webassembly-examples/blob/master/understanding-text-format/shared-address-space.html">shared-address-space.html</a> (<a href="https://mdn.github.io/webassembly-examples/understanding-text-format/shared-address-space.html">see it live also</a>).</p>
 </div>
 
 <h2 id="Bulk_memory_operations">Bulk memory operations</h2>
@@ -542,7 +542,7 @@ Promise.all([
 </ul>
 
 <div class="notecard note">
-<p><strong>Note</strong>: You can find more information in the <a href="https://github.com/WebAssembly/bulk-memory-operations/blob/master/proposals/bulk-memory-operations/Overview.md">Bulk Memory Operations and Conditional Segment Initialization</a> proposal.</p>
+<p><strong>Note:</strong> You can find more information in the <a href="https://github.com/WebAssembly/bulk-memory-operations/blob/master/proposals/bulk-memory-operations/Overview.md">Bulk Memory Operations and Conditional Segment Initialization</a> proposal.</p>
 </div>
 
 <h2 id="Reference_types">Reference types</h2>
@@ -555,7 +555,7 @@ Promise.all([
 </ul>
 
 <div class="notecard note">
-<p><strong>Note</strong>: The <a href="https://rustwasm.github.io/docs/wasm-bindgen/">wasm-bindgen</a> documentation contains some useful information on how to take advantage of <code>externref</code> from Rust.</p>
+<p><strong>Note:</strong> The <a href="https://rustwasm.github.io/docs/wasm-bindgen/">wasm-bindgen</a> documentation contains some useful information on how to take advantage of <code>externref</code> from Rust.</p>
 </div>
 
 <h2 id="Multi-value_WebAssembly">Multi-value WebAssembly</h2>
@@ -604,7 +604,7 @@ Promise.all([
 <p>Unlike unshared memories, shared memories must specify a "maximum" size, in both the JavaScript API constructor and wasm text format.</p>
 
 <div class="notecard note">
-<p><strong>Note</strong>: You can find a lot more details in the <a href="https://github.com/WebAssembly/threads/blob/master/proposals/threads/Overview.md">Threading proposal for WebAssembly</a>.</p>
+<p><strong>Note:</strong> You can find a lot more details in the <a href="https://github.com/WebAssembly/threads/blob/master/proposals/threads/Overview.md">Threading proposal for WebAssembly</a>.</p>
 </div>
 
 <h3 id="Atomic_memory_accesses">Atomic memory accesses</h3>
@@ -612,7 +612,7 @@ Promise.all([
 <p>A number of new wasm instructions have been added that can be used to implement higher level features like mutexes, condition variables, etc. You can <a href="https://github.com/WebAssembly/threads/blob/master/proposals/threads/Overview.md#atomic-memory-accesses">find them listed here</a>. These instructions are allowed on non-shared memories as of Firefox 80.</p>
 
 <div class="notecard note">
-<p><strong>Note</strong>: The <a href="https://emscripten.org/docs/porting/pthreads.html">Emscripten Pthreads support page</a> shows how to take advantage of this new functionality from Emscripten.</p>
+<p><strong>Note:</strong> The <a href="https://emscripten.org/docs/porting/pthreads.html">Emscripten Pthreads support page</a> shows how to take advantage of this new functionality from Emscripten.</p>
 </div>
 
 <h2 id="Summary">Summary</h2>
